--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Entrega-1</title>
+        <title>Entrega-1-rama-devNico</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>     
 
