add fixes sol.html

--- a/pages/sol.html
+++ b/pages/sol.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>     
 
-    <body>
+    <body class="sol-body">
         <header>
             <div class="header-conteiner">
                 <a href="../index.html" id="logo" alt="DiscoveryUniverse - go to homepage">
@@ -28,7 +28,7 @@
 
         <main>
             <div class="main-conteiner-sol">                
-                <article>
+                <article class="sol-article">
                     <h1>EL SOL</h1>
                     <p>El Sol es una estrella de tipo-G de la secuencia principal y clase de luminosidad V que se encuentra en el centro del sistema solar y constituye la mayor fuente de radiación electromagnética de este sistema planetario. Es una esfera casi perfecta de plasma, con un movimiento convectivo interno que genera un campo magnético a través de un proceso de dinamo. Cerca de tres cuartas partes de la masa del Sol constan de hidrógeno; el resto es principalmente helio, con cantidades mucho más pequeñas de elementos, incluyendo el oxígeno, carbono, neón e hierro.                        
                     </p>
