Ajustes finales en CSS

--- a/pages/exploracion.html
+++ b/pages/exploracion.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>     
 
-    <body>
+    <body class="exp-body">
         <header>
-            <div class="header-conteiner">
+            <div class="exp-header-conteiner">
                 <a href="../index.html" id="logo" alt="DiscoveryUniverse - go to homepage">
                     DISCOVERY
                     UNIVERSE
@@ -26,9 +26,9 @@
             </div>
         </header>
 
-        <main>
+        <main class="exp-main-conteiner">
             <div id="seccion1">
-                <article>
+                <article class="exp-article">
                     <h1>STARSHIP</h1>
                     <p>Starship, (también llamada Starship/Super Heavy) es un futuro sistema de lanzamiento y nave espacial totalmente reutilizable desarrollado por SpaceX como proyecto de vuelo espacial privado. Está siendo diseñado para permitir el transporte de carga y pasajeros hacia la órbita terrestre, la Luna, Marte y más allá. La nave (nombrada como Starship) se usará en lanzamientos orbitales en conjunto con una primera etapa, el propulsor Super Heavy, por lo que servirá como un vehículo de lanzamiento de dos etapas a órbita. A la combinación de nave espacial (2ª etapa) y propulsor (1ª etapa) también se le llama Starship.                        
                         La gran carga útil esperada de hasta 150.000 kg lo convertiría en un vehículo de lanzamiento superpesado. Starship pretende ser el cohete más poderoso en la historia de la humanidad, y el primer cohete orbital 100% reutilizable.
@@ -38,7 +38,7 @@
         </main>
 
         <footer>
-            <div class="footer-conteiner">
+            <div class="exp-footer-conteiner">
                 <span id="sign">DiscoveryUniverse &copy; 2023</span>
                 <div id="socialmedia">
                     <a id="instagram" href="https://www.instagram.com/discoveryuniverse/" rel="noopener" target="_blank" class="social"> <img src="../assets/img/footer/instagram.png"></a>
