--- a/pages/observatorios.html
+++ b/pages/observatorios.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>     
 
-    <body>
+    <body class="obs-body">
         <header>
-            <div class="header-conteiner">
+            <div class="obs-header-conteiner">
                 <a href="../index.html" id="logo" alt="DiscoveryUniverse - go to homepage">
                     DISCOVERY
                     UNIVERSE
@@ -26,9 +26,9 @@
             </div>
         </header>
 
-        <main>
+        <main class="obs-main-conteiner">
             <div id="seccion1">
-                <article>
+                <article class="obs-article">
                     <h1>ALMA</h1>
                     <p>El Atacama Large Millimeter/submillimeter Array (ALMA), una asociación internacional entre Europa, Norteamérica y Asia del Este, en colaboración con la República de Chile, es el mayor proyecto astronómico del mundo. Se trata de un interferómetro revolucionario que comprende un conjunto de 66 antenas (antenas también llamadas: reflectores o radiotelescopios cuando es de una única antena) de siete y doce metros de diámetro destinados a observar longitudes de onda milimétricas y submilimétricas. El proyecto fue construido en el llano de Chajnantor, a 5058,7 metros de altitud, en el desierto de Atacama, en la zona norte de Chile. Con un coste de más de 1000 millones de euros es el mayor y más caro radiotelescopio terrestre construido.
                     </p>
@@ -37,7 +37,7 @@
         </main>
 
         <footer>
-            <div class="footer-conteiner">
+            <div class="obs-footer-conteiner">
                 <span id="sign">DiscoveryUniverse &copy; 2023</span>
                 <div id="socialmedia">
                     <a id="instagram" href="https://www.instagram.com/discoveryuniverse/" rel="noopener" target="_blank" class="social"> <img src="../assets/img/footer/instagram.png"></a>
