--- a/pages/sol.html
+++ b/pages/sol.html
@@ -10,7 +10,7 @@
 
     <body class="sol-body">
         <header>
-            <div class="header-conteiner">
+            <div class="sol-header-conteiner">
                 <a href="../index.html" id="logo" alt="DiscoveryUniverse - go to homepage">
                     DISCOVERY
                     UNIVERSE
@@ -27,17 +27,17 @@
         </header>
 
         <main>
-            <div class="main-conteiner-sol">                
+            <div class="sol-main-conteiner">                
                 <article class="sol-article">
                     <h1>EL SOL</h1>
-                    <p>El Sol es una estrella de tipo-G de la secuencia principal y clase de luminosidad V que se encuentra en el centro del sistema solar y constituye la mayor fuente de radiación electromagnética de este sistema planetario. Es una esfera casi perfecta de plasma, con un movimiento convectivo interno que genera un campo magnético a través de un proceso de dinamo. Cerca de tres cuartas partes de la masa del Sol constan de hidrógeno; el resto es principalmente helio, con cantidades mucho más pequeñas de elementos, incluyendo el oxígeno, carbono, neón e hierro.                        
-                    </p>
+                    <p>Es una estrella de tipo-G de la secuencia principal y clase de luminosidad V que se encuentra en el centro del sistema solar y constituye la mayor fuente de radiación electromagnética de este sistema planetario. Es una esfera casi perfecta de plasma, con un movimiento convectivo interno que genera un campo magnético a través de un proceso de dinamo. Cerca de tres cuartas partes de la masa del Sol constan de hidrógeno; el resto es principalmente helio, con cantidades mucho más pequeñas de elementos, incluyendo el oxígeno, carbono, neón e hierro.                        
+                    </p>                    
                 </article>
             </div>
         </main>
 
         <footer>
-            <div class="footer-conteiner">
+            <div class="sol-footer-conteiner">
                 <span id="sign">DiscoveryUniverse &copy; 2023</span>
                 <div id="socialmedia">
                     <a id="instagram" href="https://www.instagram.com/discoveryuniverse/" rel="noopener" target="_blank" class="social"> <img src="../assets/img/footer/instagram.png"></a>
