--- a/pages/lunas.html
+++ b/pages/lunas.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>     
 
-    <body>
+    <body class="lunas-body">
         <header>
-            <div class="header-conteiner">
+            <div class="lunas-header-conteiner">
                 <a href="../index.html" id="logo" alt="DiscoveryUniverse - go to homepage">
                     DISCOVERY
                     UNIVERSE
@@ -26,18 +26,18 @@
             </div>
         </header>
 
-        <main>
+        <main class="lunas-main-conteiner">
             <div id="seccion1">
-                <article>
+                <article class="lunas-article">
                     <h1>LA LUNA</h1>
-                    <p>La Luna es el único satélite natural de la Tierra. Con un diámetro ecuatorial de 3474.8 km, es el quinto satélite más grande del sistema solar, mientras que en cuanto al tamaño proporcional respecto a su planeta es el satélite más grande: un cuarto del diámetro de la Tierra y 1/81 de su masa. Es, además, después de Ío, el segundo satélite más denso. Se encuentra en relación síncrona con la Tierra, siempre mostrando la misma cara hacia el planeta. El hemisferio visible está marcado con oscuros mares lunares de origen volcánico entre las brillantes montañas antiguas y los destacados astroblemas.
+                    <p>La Luna es el único satélite natural de la Tierra. Con un diámetro ecuatorial de 3474.8 km, es el quinto satélite más grande del sistema solar, mientras que en cuanto al tamaño proporcional respecto a su planeta es el satélite más grande: un cuarto del diámetro de la Tierra y 1/81 de su masa. Es, además, después de Ío (El satelite mas cercano de Jupiter), el segundo satélite más denso. Se encuentra en relación síncrona con la Tierra, siempre mostrando la misma cara hacia el planeta. El hemisferio visible está marcado con oscuros mares lunares de origen volcánico entre las brillantes montañas antiguas y los destacados astroblemas.
                     </p>
                 </article>
             </div>
         </main>
 
         <footer>
-            <div class="footer-conteiner">
+            <div class="lunas-footer-conteiner">
                 <span id="sign">DiscoveryUniverse &copy; 2023</span>
                 <div id="socialmedia">
                     <a id="instagram" href="https://www.instagram.com/discoveryuniverse/" rel="noopener" target="_blank" class="social"> <img src="../assets/img/footer/instagram.png"></a>
