Ultimos ajustes Responsive + carrusel

--- a/pages/lunas.html
+++ b/pages/lunas.html
@@ -34,6 +34,38 @@
                     </p>
                 </article>
             </div>
+            <div id="seccion2">
+                <h1>OTRAS LUNAS</h1>
+            </div>
+            <div class="lunas-carrusel-conteiner">
+                <div class="lunas-item-carrusel" id="lunas-item1">
+                    <div class="lunas-slide" id="lunas-slide1">
+                        <img src="../assets/img/lunas/europa-satelite.jpg" alt="europa-satelite">
+                    </div>
+                    <div class="lunas-carrusel-bottoms">
+                        <a class="luna-prev" href="#lunas-slide3">&#10094;</a>
+                        <a class="luna-next" href="#lunas-slide2">&#10095;</a>
+                    </div>
+                </div>
+                <div class="lunas-item-carrusel" id="lunas-item2">
+                    <div class="lunas-slide" id="lunas-slide2">
+                        <img src="../assets/img/lunas/io_satelite.jpg" alt="io-satelite">
+                    </div>
+                    <div class="lunas-carrusel-bottoms">
+                        <a class="luna-prev" href="#lunas-slide1">&#10094;</a>
+                        <a class="luna-next" href="#lunas-slide3">&#10095;</a>
+                    </div>
+                </div>
+                <div class="lunas-item-carrusel" id="lunas-item3">
+                    <div class="lunas-slide" id="lunas-slide3">
+                        <img src="../assets/img/lunas/titan-satelite.jpg" alt="titan-satelite">
+                    </div>
+                    <div class="lunas-carrusel-bottoms">
+                        <a class="luna-prev" href="#lunas-slide2">&#10094;</a>
+                        <a class="luna-next" href="#lunas-slide1">&#10095;</a>
+                    </div>
+                </div>
+            </div>
         </main>
 
         <footer>
